--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,21 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <header class="header">
+        <div class="container">
         <a class="logo" href="../index.html">Web <span class="logo-header">Studio</span></a>
         <nav>
             <ul class="nav-list">
-                <li class="nav-list-item"><a class="nav-list-link" href="./index.html">Студія</a></li>
-                <li class="nav-list-item"><a class="nav-list-link current" href="./portfolio.html">Портфоліо</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="../index.html">Студія</a></li>
+                <li class="nav-list-item"><a class="nav-list-link current" href="../pages/portfolio.html">Портфоліо</a></li>
                 <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
             </ul>
         </nav>
@@ -27,10 +28,12 @@
             <li><a class="contacts-list-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="contacts-list-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+    </div>
     </header>
 
     <main>
         <section class="portfolio-section">
+            <div class="container">
             <ul class="buttons-list">
                 <li><button type="button" class="btn">Усі</button></li>
                 <li><button type="button" class="btn">Вебсайти</button></li>
@@ -38,60 +41,59 @@
                 <li><button type="button" class="btn">Дизайн</button></li>
                 <li><button type="button" class="btn">Даркетинг</button></li>
             </ul>
-            </section>
-            <section class="portfolio-teg">
             <ul class="portfolio-list">
                 <li>
-                    <img src="Tekhnokryak.jpg" alt="Tekhnokryak">
+                    <img src="../img/tekhnokryak.jpg" alt="Tekhnokryak">
                     <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="New-Orlean-vs-Golden-Star.jpg" alt="New-Orlean-vs-Golden-Star">
+                    <img src="../img/new-orlean-vs-golden-star.jpg" alt="New-Orlean-vs-Golden-Star">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="Seafood.jpg" alt="Seafood">
+                    <img src="../img/seafood.jpg" alt="Seafood">
                     <h2>Ресторан Seafood</h2>
                     <p>Додаток</p>
                 </li>
                 <li>
-                    <img src="Prime.jpg" alt="Prime">
+                    <img src="../img/prime.jpg" alt="Prime">
                     <h2>Проєкт Prime</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="Boxes.jpg" alt="Boxes">
+                    <img src="../img/boxes.jpg" alt="Boxes">
                     <h2>Проєкт Boxes</h2>
                     <p>Додаток</p>
                 </li>
                 <li>
-                    <img src="Inspiration-has-no-Borders.jpg" alt="Inspiration-has-no-Borders">
+                    <img src="../img/inspiration-has-no-borders.jpg" alt="Inspiration-has-no-Borders">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="Limited-Edition.jpg" alt="Limited-Edition">
+                    <img src="../img/limited-edition.jpg" alt="Limited-Edition">
                     <h2>Видання Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="LAB.jpg" alt="LAB">
+                    <img src="../img/lab.jpg" alt="LAB">
                     <h2>Проєкт LAB</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="Growing-Business.jpg" alt="Growing-Business">
+                    <img src="../img/growing-business.jpg" alt="Growing-Business">
                     <h2>Growing Business</h2>
                     <p>Додаток</p>
                 </li>
             </ul>
+        </div>
         </section>
     </main>
 
     <footer class="footer">
-        <div class="box">
+        <div class="container">
             <a class="logo" href="../index.html">Web<span class="logo-footer">Studio</span></a>
             <address class="addres">
                 <ul class="addres-list">
