--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -16,17 +16,17 @@
 <body>
     <header class="header">
         <div class="container">
-        <a class="logo" href="../index.html">Web <span class="logo-header">Studio</span></a>
-        <nav>
+        <nav class="header-nav">
+            <a class="header-logo" href="../index.html">Web<span class="header-span">Studio</span></a>
             <ul class="nav-list">
-                <li class="nav-list-item"><a class="nav-list-link" href="../index.html">Студія</a></li>
-                <li class="nav-list-item"><a class="nav-list-link current" href="../pages/portfolio.html">Портфоліо</a></li>
-                <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
+                <li class="nav-item"><a class="nav-link" href="../index.html">Студія</a></li>
+                <li class="nav-item"><a class="nav-link current" href="../pages/portfolio.html">Портфоліо</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
             </ul>
         </nav>
-        <ul class="contacts-list">
-            <li><a class="contacts-list-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contacts-list-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="header-list">
+            <li class="header-item"><a class="header-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-item"><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </div>
     </header>
@@ -39,53 +39,53 @@
                 <li><button type="button" class="btn">Вебсайти</button></li>
                 <li><button type="button" class="btn">Додатки</button></li>
                 <li><button type="button" class="btn">Дизайн</button></li>
-                <li><button type="button" class="btn">Даркетинг</button></li>
+                <li><button type="button" class="btn">Маркетинг</button></li>
             </ul>
             <ul class="portfolio-list">
-                <li>
-                    <img src="../img/tekhnokryak.jpg" alt="Tekhnokryak">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                <li class="services-item">
+                    <img class="services-img" src="../img/tekhnokryak.jpg" alt="Tekhnokryak">
+                    <h2 class="services-caption">Технокряк</h2>
+                    <p class="services-text">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="../img/new-orlean-vs-golden-star.jpg" alt="New-Orlean-vs-Golden-Star">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                <li class="services-item">
+                    <img class="services-img" src="../img/new-orlean-vs-golden-star.jpg" alt="New-Orlean-vs-Golden-Star">
+                    <h2 class="services-caption">Постер New Orlean vs Golden Star</h2>
+                    <p class="services-text">Дизайн</p>
                 </li>
-                <li>
-                    <img src="../img/seafood.jpg" alt="Seafood">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Додаток</p>
+                <li class="services-item">
+                    <img class="services-img" src="../img/seafood.jpg" alt="Seafood">
+                    <h2 class="services-caption">Ресторан Seafood</h2>
+                    <p class="services-text">Додаток</p>
                 </li>
-                <li>
-                    <img src="../img/prime.jpg" alt="Prime">
-                    <h2>Проєкт Prime</h2>
-                    <p>Маркетинг</p>
+                <li class="services-item">
+                    <img class="services-img" src="../img/prime.jpg" alt="Prime">
+                    <h2 class="services-caption">Проєкт Prime</h2>
+                    <p class="services-text">Маркетинг</p>
                 </li>
-                <li>
-                    <img src="../img/boxes.jpg" alt="Boxes">
-                    <h2>Проєкт Boxes</h2>
-                    <p>Додаток</p>
+                <li class="services-item">
+                    <img class="services-img" src="../img/boxes.jpg" alt="Boxes">
+                    <h2 class="services-caption">Проєкт Boxes</h2>
+                    <p class="services-text">Додаток</p>
                 </li>
-                <li>
-                    <img src="../img/inspiration-has-no-borders.jpg" alt="Inspiration-has-no-Borders">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                <li class="services-item">
+                    <img class="services-img" src="../img/inspiration-has-no-borders.jpg" alt="Inspiration-has-no-Borders">
+                    <h2 class="services-caption">Inspiration has no Borders</h2>
+                    <p class="services-text">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="../img/limited-edition.jpg" alt="Limited-Edition">
-                    <h2>Видання Limited Edition</h2>
-                    <p>Дизайн</p>
+                <li class="services-item">
+                    <img class="services-img" src="../img/limited-edition.jpg" alt="Limited-Edition">
+                    <h2 class="services-caption">Видання Limited Edition</h2>
+                    <p class="services-text">Дизайн</p>
                 </li>
-                <li>
-                    <img src="../img/lab.jpg" alt="LAB">
-                    <h2>Проєкт LAB</h2>
-                    <p>Маркетинг</p>
+                <li class="services-item">
+                    <img class="services-img" src="../img/lab.jpg" alt="LAB">
+                    <h2 class="services-caption">Проєкт LAB</h2>
+                    <p class="services-text">Маркетинг</p>
                 </li>
-                <li>
-                    <img src="../img/growing-business.jpg" alt="Growing-Business">
-                    <h2>Growing Business</h2>
-                    <p>Додаток</p>
+                <li class="services-item">
+                    <img class="services-img" src="../img/growing-business.jpg" alt="Growing-Business">
+                    <h2 class="services-caption">Growing Business</h2>
+                    <p class="services-text">Додаток</p>
                 </li>
             </ul>
         </div>
@@ -94,16 +94,19 @@
 
     <footer class="footer">
         <div class="container">
-            <a class="logo" href="../index.html">Web<span class="logo-footer">Studio</span></a>
-            <address class="addres">
-                <ul class="addres-list">
-                    <li class="addres-list-item"><a class="addres-list-link location-link" href="https://www.google.com/maps/search/площа+Лесі+Українки,+26,+Киев/@50.4269816,30.5366207,17z/data=!3m1!4b1?entry=ttu">м. Київ, пр-т Лесі
-                            Українки, 26</a>
-                    </li>
-                    <li class="addres-list-item"><a class="addres-list-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="addres-list-item"><a class="addres-list-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
+                <a class="footer-logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+                <address class="addres">
+                    <a class="footer-addres"
+                        href="https://www.google.com/maps/search/площа+Лесі+Українки,+26,+Киев/@50.4269816,30.5366207,17z/data=!3m1!4b1?entry=ttu">м.
+                        Київ, пр-т Лесі
+                        Українки, 26</a>
+                    <ul class="addres-list">
+                        <li class="addres-item"><a class="addres-link"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="addres-item"><a class="addres-link" href="tel:+380961111111">+38 096 111 11
+                                11</a></li>
+                    </ul>
+                </address>
         </div>
     </footer>
 
